--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>wap-mirco-shop</title>
+    <meta charset="utf-8" />
+    <meta name="renderer" content="webkit" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
+    <!-- mobile -->
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport" />
+    <meta name="HandheldFriendly" content="true" />
+    <meta name="msapplication-tap-highlight" content="no" />
+    <meta content="telephone=no" name="format-detection" />
+    <!-- mobile -->
+    <title>wap-micro-shop</title>
+    <meta name="keywords" content="keywords" />
+    <meta name="description" itemprop="description" content="description" />
+    <!-- css -->
+    <link rel="stylesheet" type="text/css" href="font/font.css">
+    <link rel="stylesheet" type="text/css" href="css/common.css">
   </head>
   <body>
     <noscript>
